[package]

name = "scoped-thread-pool"
version = "1.0.1"
authors = ["Mason Soroka-Gill <masonsorokagill@pm.me>"]
repository = "https://github.com/SOROM2/scoped-thread-pool"
description = "A flexible thread pool providing scoped threads. Updated fork of https://github.com/reem/rust-scoped-pool"
readme = "README.md"
license = "MIT"

[dependencies]
variance = "0.1"
crossbeam = "0.7"
scopeguard = "0.1"

[dev-dependencies]
rand = "0.3"
itertools = "0.4"

