[package]

name = "scoped-thread-pool"
version = "1.0.4"
authors = ["Mason Soroka-Gill <mordinel@pm.me>"]
repository = "https://github.com/Mordinel/scoped-thread-pool"
description = "A flexible thread pool providing scoped threads. Updated fork of https://github.com/reem/rust-scoped-pool"
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
variance = "0.1"
crossbeam = "0.8"
scopeguard = "1.1"

[dev-dependencies]
rand = "0.8.5"
itertools = "0.10"

